# Pedro_VizzarroVallejos_Fall_22

./: .gitignore  Archimedes.sln  CMakeLists.txt  README.md  unique.txt
Abelian/: Abelian.h  Abelian.vcxproj  Abelian.vcxproj.filters  AbelianApp.cpp  AbelianApp.h  AbelianUtil.h  AbelianWindow.cpp  AbelianWindow.h  CMakeLists.txt  Event.cpp  Event.h  Keys.h  Picture.cpp  Picture.h  PictureImplementation.h  RenderImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  WindowImplementation.h  pch.h
Abelian/GLFWcode/: GLFWimplementation.cpp  GLFWimplementation.h  GLFWwindow.h
Abelian/OpenGLcode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Archimedes/: Adversary.cpp  Adversary.h  Archimedes.cpp  Archimedes.vcxproj  Archimedes.vcxproj.filters  CMakeLists.txt  GameBoard.cpp  GameBoard.h  SelectState.h  TileType.h  WinState.h
Assets/Shaders/: defaultAbelianFragment.glsl  defaultAbelianVertex.glsl
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
